@@ -1,3 +1,7 @@
+* Thu Nov 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
+- Increase precision for numerical solution for geometric nonlinear problems.
+- Add code to check for out-of-balance forces in the equilibrium() function.
+
 * Thu Nov  5 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
 - Small polishing edits to the format of the Output Data file.  
 
